# sktime-tutorial-euroscipy2024

./: .gitignore  README.md  requirements.txt  requirements_dl.txt  requirements_full.txt  requirements_lite.txt
.binder/: Dockerfile
example_package/: pyproject.toml
example_package/examples/: airline_data.ipynb
example_package/src/ensemble_forecasting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
example_package/src/residualboosting/: __init__.py  forecaster.py
example_package/src/residualboosting/_tutorial_files/: forecaster_2.py  forecaster_3.py
example_package/tests/: test_check_estimator.py
notebooks/: 00_introduction.ipynb  01_forecasting.ipynb  01_introduction.ipynb  01a_forecasting.ipynb  02_global_forecasting_demand.ipynb  02_hierarchical_forecasting.ipynb  03_global_forecasting.ipynb  04_customization.ipynb  05_outro.ipynb  utils.py
